@@ -13,6 +13,9 @@ import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.annotation.Bean;
 import org.springframework.scheduling.annotation.EnableScheduling;
 
+import java.util.HashMap;
+import java.util.Map;
+
 @SpringBootApplication
 @EnableScheduling // adding some interaction with schedule
 public class BrowserBasedMmorpgApplication {
@@ -35,12 +38,10 @@ public class BrowserBasedMmorpgApplication {
     @Bean
     public Account getAccount() {
 
-
         //System.out.println(repo.getByUsername("steven").toString() + " this error");
         return repo.getByUsername("steven");
 
     }
-
 
     @Bean
     public CommandLineRunner studentDemo(AccountRepository repo) {
@@ -48,19 +49,21 @@ public class BrowserBasedMmorpgApplication {
 
             UserData d = new UserData(56, 212000000, 27, 277, 2666);
             Barkeeping b = new Barkeeping(1, 0, 0, false, false, 30000);
+            Map<Integer, Integer> drinks = new HashMap<>();
+
+            drinks.put(1, 20);
+
+            b.setReadyDrinks(drinks);
 
             Account l = new Account("steven", d, b);
 
             repo.save(l);
-            //System.out.println(serv.buyBar("steven"));
-
-            //System.out.println(repo.getById(1L).getUserData().getMoney());
 
             repou.save(new User("steven", "test", "USER"));
 
             Account account = repo.getByUsername("steven");
 
-            System.out.println(account.getBarkeeping().getIngredients().get("water"));
+            System.out.println(account.getBarkeeping().getReadyDrinks().get(1));
 
 
             //Here comes System.out tests
